<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:padding="30dp"
    tools:context="com.rosinante.firestorerealtimechat.MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/title_main"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_realtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_realtime"
        android:textColor="@android:color/white"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/button_firestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_realtime"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_firestore"
        android:textColor="@android:color/white"
        android:textIsSelectable="true" />
</RelativeLayout>
