<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rosinante.firestorerealtimechat.firestore.FirestoreChatActivity">

    <TextView
        android:id="@+id/text_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/textempty" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clipToPadding="false"
        android:padding="16dp"
        tools:listitem="@layout/chat_item" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_edit_text"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/send"
            android:textIsSelectable="true" />

    </LinearLayout>
</RelativeLayout>
